--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -26,16 +26,20 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}"><strong>Galería</strong></a>
                     </li>
                     {% if request.user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'favoritos' %}">Favoritos</a>
+                    </li>
+                {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'favoritos' %}">Favoritos</a>
+                        <a class="nav-link" href="{% url 'exit' %}">Salir</a>
                     </li>
                     {% endif %}
-                    <li class="nav-item">
-                        {% if request.user.is_authenticated %}
-                        <a class="nav-link" href="{% url 'exit' %}">Salir</a> {% else %}
-                        <a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a> {% endif %}
+                        <a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a> 
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'registro' %}">Registrarme</a>
                     </li>
-                </ul>
+            </ul>
 
 
             </div>
