🧹 Fix: funultimos cambios

--- a/app/templates/favourites.html
+++ b/app/templates/favourites.html
@@ -12,12 +12,13 @@
             <table class="table table-striped table-hover table-bordered">
                 <thead>
                     <tr>
-                        <th>#</th>
-                        <th>Imagen</th>
-                        <th>Nombre</th>
-                        <th>Altura <i class="fa fa-sort"></i></th>
-                        <th>Peso</th>
-                    </tr>
+                    <th>#</th>
+                    <th>Imagen</th>
+                    <th>Nombre</th>
+                    <th>Altura <i class="fa fa-sort"></i></th>
+                    <th>Peso</th>
+                    <th>Acción</th> <!-- 🎯 Acá -->
+                </tr>
                 </thead>
                 <tbody>
                     {% for favourite in favourite_list %}
