--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -20,25 +20,26 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'index-page' %}">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'index-page' %}">Inicio▶️</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}"><strong>Galería</strong></a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}"><strong>Galería📲</strong></a>
                     </li>
                     {% if request.user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'favoritos' %}">Favoritos</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'exit' %}">Salir</a>
-                    </li>
-                    {% endif %}
-                        <a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a> 
+                            <a class="nav-link" href="{% url 'favoritos' %}">Favoritos ❤️</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'registro' %}">Registrarme</a>
-                    </li>
+                            <a class="nav-link" href="{% url 'exit' %}">Salir 🔒</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">Iniciar sesión 🔜</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'registro' %}">Registrarme 🆔</a>
+                        </li>
+                    {% endif %}
             </ul>
 
 
